--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,12 +8,174 @@
     <title>Masterkeys</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
+    <!-- JavaScript Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4"
         crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <link rel="stylesheet" href="styles.css">
+    <script src="javascript.js"></script>
 </head>
+
 <body>
-    
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="index.html">MasterKeys ⚿</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+                aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                    <li class="nav-item">
+                        <a class="nav-link" href="products.html">Productos</a>
+                    <li class="nav-item">
+                        <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Group buy</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Preguntas
+                            frecuentes</a>
+                    </li>
+                </ul>
+                <form class="d-flex">
+                    <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                    <button class="btn btn-outline-info" type="submit">Search</button>
+                </form>
+            </div>
+        </div>
+    </nav>
+
+    <!-- Cuerpo -->
+    <div class="container align-center">
+        <br>
+        <div class="card text-center text-white bg-dark mb-3">
+            <div class="card-body">
+                <h5 class="card-title">MasterKeys ⚿</h5>
+                <h6 class="card-subtitle mb-2 text-muted">Piezas Premium</h6>
+                <p class="card-text">Switches, Keycaps y todo para tu Teclado Mecánico.</p>
+            </div>
+        </div>
+        <div id="carouselExampleDark" class="carousel slide" data-bs-ride="carousel">
+            <div class="carousel-indicators">
+                <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="0" class="active"
+                    aria-current="true" aria-label="Slide 1"></button>
+                <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="1"
+                    aria-label="Slide 2"></button>
+            </div>
+            <div class="carousel-inner">
+                <div class="carousel-item active" data-bs-interval="10000">
+                    <img src="https://d2r9epyceweg5n.cloudfront.net/stores/001/427/349/themes/new_linkedman/slide-1613498352829-2784365192-cad5750bee64cd44e0a8daf576ee92f81613498357-1024-1024.png?1091286849"
+                        class="d-block w-100" alt="...">
+                    <div class="carousel-caption d-none d-md-block">
+                    </div>
+                </div>
+                <div class="carousel-item" data-bs-interval="2000">
+                    <img src="https://d2r9epyceweg5n.cloudfront.net/stores/001/427/349/themes/new_linkedman/slide-1613498352829-2821647174-5bb01bbb6ee820a22b9d44f1575dd6411613498356-1024-1024.png?1091286849"
+                        class="d-block w-100" alt="...">
+                    <div class="carousel-caption d-none d-md-block">
+                    </div>
+                </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleDark"
+                data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleDark"
+                data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+            </button>
+        </div>
+        <div class="container">
+            <br>
+            <h2>Los más vistos</h2>
+            <div class="row row-cols-4 row-cols-md-8 g-4">
+                <div class="col">
+                    <div class="card">
+                        <img src="https://d2r9epyceweg5n.cloudfront.net/stores/001/427/349/products/c3_equalz_x_tkc_kiwi_switches__1616035474_370ddada_progressive1-092da1760eeea5dd4816225172296946-320-0.jpg"
+                            class="card-img">
+                        <div class="card-body">
+                            <h5 class="card-title">C³ EQUALZ X TKC KIWI SWITCHES</h5>
+                            <p class="card-text">Los Switches Kiwi son miembros de la familia de switches frutales
+                                de
+                                TKC, junto a los Tangerines.</p>
+                            <p class="card-text">Táctiles - Pack 10 Unidades</p>
+                            <p class="card-text"><small class="text-muted">$13.490</small></p>
+                            <a class="btn btn-secondary btn-xs" href="products.html">Comprar</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card">
+                        <img src="https://d2r9epyceweg5n.cloudfront.net/stores/001/427/349/products/011-c35f6554e4a57e720016107504361329-240-0.jpg"
+                            class="card-img">
+                        <div class="card-body">
+                            <h5 class="card-title">KAIHUA HALO TRUE MECHANICAL SWITCHES</h5>
+                            <p class="card-text">Combinan los mejores atributos de los switches silenciosos y de
+                                clic,
+                                lo que da como resultado una consistencia y suavidad casi perfecta con cada
+                                pulsación de
+                                tecla.</p>
+                            <p class="card-text">Táctiles - Pack 67 Unidades</p>
+                            <p class="card-text"><small class="text-muted">$57.290</small></p>
+                            <a class="btn btn-secondary btn-xs" href="products.html">Comprar</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card">
+                        <img src="https://d2r9epyceweg5n.cloudfront.net/stores/001/427/349/products/webp-net-resizeimage1-f98e5dbbadc688fd3516123805846713-240-0.jpg"
+                            class="card-img">
+                        <div class="card-body">
+                            <h5 class="card-title">ALPACA LINEARS SWITCHES</h5>
+                            <p class="card-text">Switches lineales suaves con resortes de 62g chapados en oro (abajo
+                                hacia afuera). Los colores se basan en la combinación de colores SA Bliss que nos
+                                trajo
+                                Minterly.</p>
+                            <p class="card-text">Lineales - Pack 10 Unidades</p>
+                            <p class="card-text"><small class="text-muted">$14.190</small></p>
+                            <a class="btn btn-secondary btn-xs" href="products.html">Comprar</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card">
+                        <img src="https://d2r9epyceweg5n.cloudfront.net/stores/001/427/349/products/creams1-080f14e088ba87d4b616123820565903-240-0.jpg"
+                            class="card-img">
+                        <div class="card-body">
+                            <h5 class="card-title">KAILH NK CREAMS SWITCHES</h5>
+                            <p class="card-text">Los switches NovelKeys Cream son lineales de los mas aclamados en
+                                el
+                                hobby. Con una case y un stem hechos de POM autolubricante, este switch ofrece una
+                                experiencia suave y única..</p>
+                            <p class="card-text">Lineales - Pack 10 Unidades</p>
+                            <p class="card-text"><small class="text-muted">$10.490</small></p>
+                            <a class="btn btn-secondary btn-xs" href="products.html">Comprar</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card">
+                        <img src="https://d2r9epyceweg5n.cloudfront.net/stores/001/427/349/products/yellow1-476ce5be32d5140e9b16129198028776-240-0.jpg"
+                            class="card-img">
+                        <div class="card-body">
+                            <h5 class="card-title">Gateron Yellow Switches</h5>
+                            <p class="card-text">Switches mecánicos lineales amarillos, la versión más reciente de
+                                un
+                                clásico Gateron, perfecto para jugar. Compatible con SMD y LED de paso.</p>
+                            <p class="card-text">Lineales - Pack 10 Unidades</p>
+                            <p class="card-text"><small class="text-muted">$6.490</small></p>
+                            <a class="btn btn-secondary btn-xs" href="products.html">Comprar</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <br>
+    </div>
+
+
 </body>
+
 </html>
